--- a/src/main/resources/html/index.html
+++ b/src/main/resources/html/index.html
@@ -22,6 +22,7 @@
 
                 <DIV class="nav-button-wrapper">
                     <DIV id="left-up-button" class="button up-button" onclick="fileListController.leftUp()">Up</DIV>
+                    <DIV id="left-create-directory-button" class="button" onclick="fileListController.leftCreateDirectory()">New directory</DIV>
                     <DIV id="left-refresh-button" class="button" onclick="fileListController.leftRefresh()">Refresh</DIV>
                 </DIV>
 
@@ -49,6 +50,7 @@
 
                 <DIV class="nav-button-wrapper">
                     <DIV id="right-up-button" class="button up-button" onclick="fileListController.rightUp()">Up</DIV>
+                    <DIV id="right-create-directory-button" class="button" onclick="fileListController.rightCreateDirectory()">New directory</DIV>
                     <DIV id="right-refresh-button" class="button" onclick="fileListController.rightRefresh()">Refresh</DIV>
                 </DIV>
 
