--- a/src/main/resources/html/index.html
+++ b/src/main/resources/html/index.html
@@ -24,6 +24,9 @@
                     <DIV id="left-up-button" class="button up-button" onclick="fileListController.leftUp()">Up</DIV>
                     <DIV id="left-create-directory-button" class="button" onclick="fileListController.leftCreateDirectory()">New directory</DIV>
                     <DIV id="left-refresh-button" class="button" onclick="fileListController.leftRefresh()">Refresh</DIV>
+                    <DIV id="left-copy-selected-button" class="button" onclick="fileListController.leftCopySelected()">Copy</DIV>
+                    <DIV id="left-move-selected-button" class="button" onclick="fileListController.leftMoveSelected()">Move</DIV>
+                    <DIV id="left-delete-selected-button" class="button" onclick="fileListController.leftDeleteSelected()">Delete</DIV>
                 </DIV>
 
                 <DIV class="table-wrapper">
@@ -52,6 +55,9 @@
                     <DIV id="right-up-button" class="button up-button" onclick="fileListController.rightUp()">Up</DIV>
                     <DIV id="right-create-directory-button" class="button" onclick="fileListController.rightCreateDirectory()">New directory</DIV>
                     <DIV id="right-refresh-button" class="button" onclick="fileListController.rightRefresh()">Refresh</DIV>
+                    <DIV id="right-copy-selected-button" class="button" onclick="fileListController.rightCopySelected()">Copy</DIV>
+                    <DIV id="right-move-selected-button" class="button" onclick="fileListController.rightMoveSelected()">Move</DIV>
+                    <DIV id="right-delete-selected-button" class="button" onclick="fileListController.rightDeleteSelected()">Delete</DIV>
                 </DIV>
 
                 <DIV class="table-wrapper">
